add modal for edit member

--- a/PrompimanFront/src/app/register-detail/register-detail.page.html
+++ b/PrompimanFront/src/app/register-detail/register-detail.page.html
@@ -69,7 +69,7 @@
       </ion-col>
     </ion-row>
     <ion-item>
-      <ion-button size="default" slot="end" expand="block" color="danger">แก้ไขข้อมูล</ion-button>
+      <ion-button size="default" slot="end" expand="block" color="danger" (click)="editMember()">แก้ไขข้อมูล</ion-button>
       <ion-button size="default" slot="end" expand="block" type="submit">Check In</ion-button>
     </ion-item>
 
