--- a/PrompimanFront/src/app/register-information/register-information.page.html
+++ b/PrompimanFront/src/app/register-information/register-information.page.html
@@ -376,7 +376,7 @@
               <ion-row>
                 <ion-col size="5">
                   <ion-item>
-                    <ion-label>Tellphone</ion-label>
+                    <ion-label>Telephone No.</ion-label>
                   </ion-item>
                 </ion-col>
                 <ion-col>
