split form between En and Th can create new member

--- a/PrompimanFront/src/app/register-information/register-information.page.scss
+++ b/PrompimanFront/src/app/register-information/register-information.page.scss
@@ -13,3 +13,13 @@
   .warning {
     color: darkorange;
   }
+
+  .card-content-md {
+    padding-left: unset;
+    padding-right: unset;
+    -webkit-padding-start: 16px;
+    padding-inline-start: 16px;
+    -webkit-padding-end: 16px;
+    padding-inline-end: 16px;
+    font-variant: all-petite-caps;
+}
