--- a/PrompimanFront/src/app/register/register.page.html
+++ b/PrompimanFront/src/app/register/register.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <!-- <form [formGroup]="fg" (ngSubmit)="handleSubmit()"> -->
   <ion-item lines="none">
     <ion-button size="default" (click)="register()" slot="end" expand="block" type="submit">
@@ -13,19 +13,20 @@
     </ion-button>
   </ion-item>
 
-  <ion-row>
-    <ion-col size="10">
-      <div class="ion-padding">
+  <ion-row class="ion-padding">
+    <ion-col size="11" >
+      <div>
         <ion-searchbar [formControl]="searchBar"></ion-searchbar>
       </div>
     </ion-col>
-    <ion-col size="2">
-      <button ion-button type="button" color="light" (click)="search(1,searchBar.value)">
-        ค้นหา
-      </button>
+    <ion-col size="1">
+      <div>
+        <ion-button size="default" slot="end" expand="block" color="dark" (click)="search(1,searchBar.value)">
+          ค้นหา
+        </ion-button>
+      </div>
     </ion-col>
   </ion-row>
-
 
   <div class="ion-padding">
     <ion-card>
@@ -50,7 +51,7 @@
     <ion-card>
       <ion-card-content>
         <ion-item class="ion-text-center"
-          *ngFor="let item of paging.members  | paginate: { itemsPerPage: 2, currentPage: p }"
+          *ngFor="let item of paging.members  | paginate: { itemsPerPage: 3, currentPage: p }"
           [routerLink]="['/register-detail/', item._id]" routerDirection="forward">
           <ion-col size="2">
             {{item.creationDateTime | date:"dd/MM/yyyy" }}
