--- a/PrompimanFront/src/app/app.component.scss
+++ b/PrompimanFront/src/app/app.component.scss
@@ -50,11 +50,11 @@ ion-menu.md ion-item {
 }
 
 ion-menu.md ion-item.selected {
-  --background: rgba(var(--ion-color-primary-rgb), 0.14);
+  --background: var(--ion-color-tertiary);
 }
 
 ion-menu.md ion-item.selected ion-icon {
-  color: var(--ion-color-primary);
+  color: var(--ion-color-secondary);
 }
 
 ion-menu.md ion-item ion-icon {
@@ -115,7 +115,7 @@ ion-note {
 }
 
 ion-item.selected {
-  --color: var(--ion-color-primary);
+  --color: var(--ion-color-secondary);
 }
 
 table, td, th {
@@ -175,7 +175,8 @@ ion-input, ion-textarea {
   color: darkorange;
 }
 
-.picCenter{
-  display: flex;
-  justify-content: center;
+.img-size{
+  width: 200px;
+  height: 200px;
+  margin-top: 1.2em;
 }
