--- a/PrompimanFront/src/app/register-information/register-information.page.html
+++ b/PrompimanFront/src/app/register-information/register-information.page.html
@@ -404,7 +404,7 @@
                   </ion-row>
 
                   <ion-item>
-                    <ion-button size="default" slot="end" expand="block" color="danger">ยกเลิก</ion-button>
+                    <ion-button size="default" slot="end" expand="block" color="danger" (click)="closeModal()">ยกเลิก</ion-button>
                     <ion-button size="default" slot="end" expand="block" type="submit">บันทึก</ion-button>
                   </ion-item>
                 </ion-list>
