--- a/PrompimanFront/src/app/register/register.page.html
+++ b/PrompimanFront/src/app/register/register.page.html
@@ -21,14 +21,14 @@
     </ion-col>
     <ion-col size="1">
       <div>
-        <ion-button size="default" slot="end" expand="block" color="dark" (click)="search(1,searchBar.value)">
+        <ion-button size="default" slot="end" expand="block" color="dark" (click)="search(searchBar.value)">
           ค้นหา
         </ion-button>
       </div>
     </ion-col>
   </ion-row>
 
-  <div class="ion-padding">
+  <div>
     <ion-card>
       <ion-card-header>
         <ion-row class="ion-text-center">
@@ -51,7 +51,7 @@
     <ion-card>
       <ion-card-content>
         <ion-item class="ion-text-center"
-          *ngFor="let item of paging.members  | paginate: { itemsPerPage: 3, currentPage: p }"
+          *ngFor="let item of paging.members  | paginate: { itemsPerPage: 2, currentPage: p }"
           [routerLink]="['/register-detail/', item._id]" routerDirection="forward">
           <ion-col size="2">
             {{item.creationDateTime | date:"dd/MM/yyyy" }}
