--- a/PrompimanFront/src/app/register/register.page.html
+++ b/PrompimanFront/src/app/register/register.page.html
@@ -59,8 +59,11 @@
           <ion-col size="3">
             {{item._id}}
           </ion-col>
-          <ion-col size="3">
+          <ion-col size="3" *ngIf = "item.th_Firstname != null">
             {{item.th_Firstname}} {{item.th_Lastname}}
+          </ion-col>
+          <ion-col size="3" *ngIf = "item.th_Firstname == null">
+            {{item.en_Firstname}} {{item.en_Lastname}}
           </ion-col>
           <ion-col size="3">
             {{item.telephone}}
