--- a/PrompimanFront/src/app/booking/booking.page.html
+++ b/PrompimanFront/src/app/booking/booking.page.html
@@ -4,6 +4,94 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+  <!-- <form [formGroup]="fg" (ngSubmit)="handleSubmit()"> -->
+  <ion-item lines="none">
+    <ion-button size="default" (click)="register()" slot="end" expand="block" type="submit">
+      <ion-icon name="add-circle-outline"></ion-icon>
+      เพิ่มข้อมูลการจอง
+    </ion-button>
+  </ion-item>
 
+  <ion-row class="ion-padding">
+    <ion-col size="11">
+      <div>
+        <ion-searchbar></ion-searchbar>
+      </div>
+    </ion-col>
+    <ion-col size="1">
+      <div>
+        <ion-button size="default" slot="end" expand="block" color="dark">
+          ค้นหา
+        </ion-button>
+      </div>
+    </ion-col>
+  </ion-row>
+
+  <div>
+    <ion-card>
+      <ion-card-header>
+        <ion-row class="ion-text-center">
+          <ion-col size="1.5">
+            <h4>เข้าวันที่</h4>
+          </ion-col>
+          <ion-col size="1.5">
+            <h4>ออกวันที่</h4>
+          </ion-col>
+          <ion-col size="1.5">
+            <h4>จองเมื่อ</h4>
+          </ion-col>
+          <ion-col size="2">
+            <h4>ชื่อ</h4>
+          </ion-col>
+          <ion-col size="2">
+            <h4>เบอร์โทรศัพท์</h4>
+          </ion-col>
+          <ion-col size="1">
+            <h4>จำนวนห้อง</h4>
+          </ion-col>
+          <ion-col size="2.5">
+          </ion-col>
+        </ion-row>
+      </ion-card-header>
+    </ion-card>
+  </div>
+
+  <div>
+    <ion-card>
+      <ion-card-header>
+        <ion-row class="ion-text-center">
+          <ion-col size="1.5">
+            <h4>02/02/2020</h4>
+          </ion-col>
+          <ion-col size="1.5">
+            <h4>04/02/2020</h4>
+          </ion-col>
+          <ion-col size="1.5">
+            <h4>02/01/2020</h4>
+          </ion-col>
+          <ion-col size="2">
+            <h4>พอลล่า</h4>
+          </ion-col>
+          <ion-col size="2">
+            <h4>021236548999</h4>
+          </ion-col>
+          <ion-col size="1">
+            <h4>2</h4>
+          </ion-col>
+          <ion-col size="1.5">
+            <ion-item lines="none">
+              <ion-button size="default" slot="end" expand="block" type="submit">ยืนยันการจอง</ion-button>
+            </ion-item>
+          </ion-col>
+          <ion-col size="1">
+            <ion-item lines="none">
+              <ion-button size="default" slot="end" expand="block" color="danger">แก้ไข</ion-button>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </ion-card-header>
+    </ion-card>
+  </div>
+  <!-- </form> -->
 </ion-content>
