--- a/PrompimanFront/src/app/booking-information/booking-information.page.html
+++ b/PrompimanFront/src/app/booking-information/booking-information.page.html
@@ -4,6 +4,123 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+  <!-- <form [formGroup]="fg" (ngSubmit)="handleSubmit()"> -->
+  <ion-list lines="none">
+    <ion-row>
+      <ion-col size="2">
+        <ion-item>
+          <ion-label>ชื่อ</ion-label>
+        </ion-item>
+      </ion-col>
+      <ion-col size="10">
+        <ion-item>
+          <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <!-- <ion-row>
+      <ion-col size="2"></ion-col>
+      <ion-col size="10">
+        <ion-item *ngIf="isValid('input1')">
+          <span class="invalid-msg">
+            กรุณากรอกข้อมูล
+          </span>
+        </ion-item>
+      </ion-col>
+    </ion-row> -->
 
+    <ion-row>
+      <ion-col size="2">
+        <ion-item>
+          <ion-label>เบอร์โทรศัพท์</ion-label>
+        </ion-item>
+      </ion-col>
+      <ion-col size="10">
+        <ion-item>
+          <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <!-- <ion-row>
+        <ion-col size="2"></ion-col>
+        <ion-col size="10">
+          <ion-item *ngIf="isValid('input1')">
+            <span class="invalid-msg">
+              กรุณากรอกข้อมูล
+            </span>
+          </ion-item>
+        </ion-col>
+      </ion-row> -->
+
+    <!-- <app-datetime text="เข้าวันที่" mode="date" ></app-datetime> -->
+    <!-- <app-datetime text="ออกวันที่" mode="date" ></app-datetime> -->
+
+    <ion-row>
+      <ion-col size="2">
+        <ion-item>
+          <ion-label>จำนวนห้อง</ion-label>
+        </ion-item>
+      </ion-col>
+      <ion-col size="10">
+        <ion-item>
+          <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <!-- <ion-row>
+          <ion-col size="2"></ion-col>
+          <ion-col size="10">
+            <ion-item *ngIf="isValid('input1')">
+              <span class="invalid-msg">
+                กรุณากรอกข้อมูล
+              </span>
+            </ion-item>
+          </ion-col>
+        </ion-row> -->
+
+    <!-- <app-datetime text="ออกวันที่" mode="date" ></app-datetime> -->
+
+    <ion-row>
+      <ion-col size="2">
+        <ion-item>
+          <ion-label>จ่ายเงินล่วงหน้า</ion-label>
+        </ion-item>
+      </ion-col>
+      <ion-col size="10">
+        <ion-item>
+          <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <!-- <ion-row>
+            <ion-col size="2"></ion-col>
+            <ion-col size="10">
+              <ion-item *ngIf="isValid('input1')">
+                <span class="invalid-msg">
+                  กรุณากรอกข้อมูล
+                </span>
+              </ion-item>
+            </ion-col>
+          </ion-row> -->
+
+
+    <!-- <ion-item text-center>
+      <ion-label>
+        <ion-button size="default"  type="">ถัดไป</ion-button>
+      </ion-label>
+    </ion-item> -->
+
+    <ion-row class="ion-padding">
+      <ion-col size="5.5">
+      </ion-col>
+      <ion-col size="1">
+        <ion-button size="default" expand="block" type="">ถัดไป</ion-button>
+      </ion-col>
+      <ion-col size="5.5">
+      </ion-col>
+    </ion-row>
+
+  </ion-list>
+  <!-- </form> -->
 </ion-content>
