--- a/PrompimanFront/src/app/register-information/register-information.page.html
+++ b/PrompimanFront/src/app/register-information/register-information.page.html
@@ -1,9 +1,3 @@
-<!-- <ion-header>
-  <ion-toolbar>
-    <ion-title>RegisterInformation</ion-title>
-  </ion-toolbar>
-</ion-header> -->
-
 <ion-content class="ion-padding">
   <ion-segment [(ngModel)]="option" (ionChange)="segmentChanged($event)">
     <ion-segment-button value="thai">
@@ -16,37 +10,31 @@
 
   <ion-row>
     <ion-col size="2">
-
-      <!-- <img src="../../assets/image/Funny-Ugly-Old-People.jpg" class="img-responsive" alt="Image"> -->
-      <img src="../../assets/image/user-silhouette.png" class="img-responsive" alt="Image">
-
+      <ion-img [src]=urlPhoto class="img-responsive" alt="Image"></ion-img>
     </ion-col>
 
     <ion-col>
-
       <ion-card>
-        <ion-card-content class="card-content-md">
-
-
+        <ion-card-content>
           <ng-container [ngSwitch]="option">
             <ng-container *ngSwitchCase="'thai'">
               <form [formGroup]="fgTh" (ngSubmit)="handleSubmit()">
                 <ion-list lines="none">
                   <ion-row>
-                    <ion-col size="5">
+                    <ion-col size="2">
                       <ion-item>
                         <ion-label>รหัสบัตรประชาชน</ion-label>
                       </ion-item>
                     </ion-col>
                     <ion-col>
                       <ion-item>
-                        <ion-input type="text" formControlName="idCard" placeholder="กรุณากรอกข้อมูล"
-                          [class.invalid]="isValidTh('idCard')"></ion-input>
+                        <ion-input [class.invalid]="isValidTh('idCard')" type="text" formControlName="idCard"
+                          placeholder="กรุณากรอกข้อมูล"></ion-input>
                       </ion-item>
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                    <ion-col size="5"></ion-col>
+                    <ion-col size="2"></ion-col>
                     <ion-item *ngIf="isValidTh('idCard')">
                       <span class="invalid-msg">
                         กรุณากรอกข้อมูล
@@ -55,7 +43,7 @@
                   </ion-row>
 
                   <ion-row>
-                    <ion-col size="5">
+                    <ion-col size="2">
                       <ion-item>
                         <ion-label>คำนำหน้า</ion-label>
                       </ion-item>
@@ -68,7 +56,7 @@
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                    <ion-col size="5"></ion-col>
+                    <ion-col size="2"></ion-col>
                     <ion-col>
                       <ion-item *ngIf="isValidTh('th_Prefix')">
                         <span class="invalid-msg">
@@ -79,7 +67,7 @@
                   </ion-row>
 
                   <ion-row>
-                    <ion-col size="5">
+                    <ion-col size="2">
                       <ion-item>
                         <ion-label>ชื่อ</ion-label>
                       </ion-item>
@@ -92,7 +80,7 @@
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                    <ion-col size="5"></ion-col>
+                    <ion-col size="2"></ion-col>
                     <ion-col>
                       <ion-item *ngIf="isValidTh('th_Firstname')">
                         <span class="invalid-msg">
@@ -103,7 +91,7 @@
                   </ion-row>
 
                   <ion-row>
-                    <ion-col size="5">
+                    <ion-col size="2">
                       <ion-item>
                         <ion-label>นามสกุล</ion-label>
                       </ion-item>
@@ -116,7 +104,7 @@
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                    <ion-col size="5"></ion-col>
+                    <ion-col size="2"></ion-col>
                     <ion-col>
                       <ion-item *ngIf="isValidTh('th_Lastname')">
                         <span class="invalid-msg">
@@ -129,7 +117,7 @@
                   <app-datetime text="เกิดวันที่" mode="date" [fg]="fgTh" formName="birthday"></app-datetime>
 
                   <ion-row>
-                    <ion-col size="5">
+                    <ion-col size="2">
                       <ion-item>
                         <ion-label>ที่อยู่</ion-label>
                       </ion-item>
@@ -142,7 +130,7 @@
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                    <ion-col size="5"></ion-col>
+                    <ion-col size="2"></ion-col>
                     <ion-col>
                       <ion-item *ngIf="isValidTh('address')">
                         <span class="invalid-msg">
@@ -155,7 +143,7 @@
                   <app-datetime text="วันบัตรหมดอายุ" mode="date" [fg]="fgTh" formName="expiryDate"></app-datetime>
 
                   <ion-row>
-                    <ion-col size="5">
+                    <ion-col size="2">
                       <ion-item>
                         <ion-label>เบอร์โทร</ion-label>
                       </ion-item>
@@ -168,7 +156,7 @@
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                    <ion-col size="5"></ion-col>
+                    <ion-col size="2"></ion-col>
                     <ion-col>
                       <ion-item *ngIf="isValidTh('telephone')">
                         <span class="invalid-msg">
@@ -179,7 +167,7 @@
                   </ion-row>
 
                   <ion-row>
-                    <ion-col size="5">
+                    <ion-col size="2">
                       <ion-item>
                         <ion-label>อาชีพ</ion-label>
                       </ion-item>
@@ -192,7 +180,7 @@
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                    <ion-col size="5"></ion-col>
+                    <ion-col size="2"></ion-col>
                     <ion-col>
                       <ion-item *ngIf="isValidTh('job')">
                         <span class="invalid-msg">
@@ -203,7 +191,7 @@
                   </ion-row>
 
                   <ion-row>
-                    <ion-col size="5">
+                    <ion-col size="2">
                       <ion-item>
                         <ion-label>เพศ</ion-label>
                       </ion-item>
@@ -214,19 +202,26 @@
                           <span class="invalid-msg">กรุณาเลือก</span>
                         </ion-item>
                         <ion-item>
-                          <ion-radio slot="start" value='M'></ion-radio>
-                          <ion-label>ชาย</ion-label>
-                        </ion-item>
-                        <ion-item>
-                          <ion-radio slot="start" value='F'></ion-radio>
-                          <ion-label>หญิง</ion-label>
+                          <ion-col>
+                            <ion-item>
+                              <ion-radio slot="start" value='M'></ion-radio>
+                              <ion-label>ชาย</ion-label>
+                            </ion-item>
+                          </ion-col>
+                          <ion-col>
+                            <ion-item>
+                              <ion-radio slot="start" value='F'></ion-radio>
+                              <ion-label>หญิง</ion-label>
+                            </ion-item>
+                          </ion-col>
                         </ion-item>
                       </ion-radio-group>
                     </ion-col>
                   </ion-row>
 
                   <ion-item>
-                    <ion-button size="default" slot="end" expand="block" color="danger">ยกเลิก</ion-button>
+                    <ion-button size="default" slot="end" expand="block" (click)="closeModal()" color="danger">ยกเลิก
+                    </ion-button>
                     <ion-button size="default" slot="end" expand="block" type="submit">บันทึก</ion-button>
                   </ion-item>
                 </ion-list>
@@ -238,7 +233,7 @@
               <form [formGroup]="fgEn" (ngSubmit)="handleSubmit()">
                 <ion-list lines="none">
                   <ion-row>
-                    <ion-col size="5">
+                    <ion-col size="2">
                       <ion-item>
                         <ion-label>Passport No.</ion-label>
                       </ion-item>
@@ -251,7 +246,7 @@
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                    <ion-col size="5"></ion-col>
+                    <ion-col size="2"></ion-col>
                     <ion-item *ngIf="isValidEn('passportNo')">
                       <span class="invalid-msg">
                         กรุณากรอกข้อมูล
@@ -260,7 +255,7 @@
                   </ion-row>
 
                   <ion-row>
-                    <ion-col size="5">
+                    <ion-col size="2">
                       <ion-item>
                         <ion-label>Prefix</ion-label>
                       </ion-item>
@@ -273,7 +268,7 @@
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                    <ion-col size="5"></ion-col>
+                    <ion-col size="2"></ion-col>
                     <ion-col>
                       <ion-item *ngIf="isValidEn('en_Prefix')">
                         <span class="invalid-msg">
@@ -284,7 +279,7 @@
                   </ion-row>
 
                   <ion-row>
-                    <ion-col size="5">
+                    <ion-col size="2">
                       <ion-item>
                         <ion-label>First&Middle Name</ion-label>
                       </ion-item>
@@ -297,7 +292,7 @@
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                    <ion-col size="5"></ion-col>
+                    <ion-col size="2"></ion-col>
                     <ion-col>
                       <ion-item *ngIf="isValidEn('en_Firstname')">
                         <span class="invalid-msg">
@@ -308,7 +303,7 @@
                   </ion-row>
 
                   <ion-row>
-                    <ion-col size="5">
+                    <ion-col size="2">
                       <ion-item>
                         <ion-label>Last Name</ion-label>
                       </ion-item>
@@ -321,7 +316,7 @@
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                    <ion-col size="5"></ion-col>
+                    <ion-col size="2"></ion-col>
                     <ion-col>
                       <ion-item *ngIf="isValidEn('en_Lastname')">
                         <span class="invalid-msg">
@@ -334,19 +329,19 @@
                   <app-datetime text="Date of Birth" mode="date" [fg]="fgEn" formName="birthday"></app-datetime>
 
                   <ion-row>
-                    <ion-col size="5">
+                    <ion-col size="2">
                       <ion-item>
                         <ion-label>Nationality</ion-label>
                       </ion-item>
                     </ion-col>
-                    <ion-col [class.invalid]="isValidEn('nationality')">
+                    <ion-col>
                       <ion-item *ngIf="isValidEn('nationality')">
                         <span class="invalid-msg">
                           กรุณาเลือก
                         </span>
                       </ion-item>
-                      <ion-select #nationSelect interface="action-sheet" formControlName="nationality"
-                        (ionChange)="change($event)">
+                      <ion-select [class.invalid]="isValidEn('nationality')" #nationSelect interface="action-sheet"
+                        formControlName="nationality" (ionChange)="change($event)">
                         <ion-select-option *ngFor="let item of Nation">{{ item.Name }}</ion-select-option>
                         <ion-select-option>สัญชาติอื่นๆ</ion-select-option>
                       </ion-select>
@@ -357,7 +352,7 @@
                   <app-datetime text="Date of expiry" mode="date" [fg]="fgEn" formName="expiryDate"></app-datetime>
 
                   <ion-row>
-                    <ion-col size="5">
+                    <ion-col size="2">
                       <ion-item>
                         <ion-label>Telephone No.</ion-label>
                       </ion-item>
@@ -370,7 +365,7 @@
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                    <ion-col size="5"></ion-col>
+                    <ion-col size="2"></ion-col>
                     <ion-col>
                       <ion-item *ngIf="isValidEn('telephone')">
                         <span class="invalid-msg">
@@ -381,30 +376,37 @@
                   </ion-row>
 
                   <ion-row>
-                    <ion-col size="5">
+                    <ion-col size="2">
                       <ion-item>
                         <ion-label>sex</ion-label>
                       </ion-item>
                     </ion-col>
-                    <ion-col [class.invalid]="isValidEn('sex')">
+                    <ion-col>
                       <ion-radio-group formControlName="sex">
                         <ion-item class="row" *ngIf="isValidEn('sex')">
                           <span class="invalid-msg">กรุณาเลือก</span>
                         </ion-item>
-                        <ion-item>
-                          <ion-radio slot="start" value='M'></ion-radio>
-                          <ion-label>Male</ion-label>
-                        </ion-item>
-                        <ion-item>
-                          <ion-radio slot="start" value='F'></ion-radio>
-                          <ion-label>Female</ion-label>
+                        <ion-item [class.invalid]="isValidEn('sex')">
+                          <ion-col>
+                            <ion-item>
+                              <ion-radio slot="start" value='M'></ion-radio>
+                              <ion-label>Male</ion-label>
+                            </ion-item>
+                          </ion-col>
+                          <ion-col>
+                            <ion-item>
+                              <ion-radio slot="start" value='F'></ion-radio>
+                              <ion-label>Female</ion-label>
+                            </ion-item>
+                          </ion-col>
                         </ion-item>
                       </ion-radio-group>
                     </ion-col>
                   </ion-row>
 
                   <ion-item>
-                    <ion-button size="default" slot="end" expand="block" color="danger" (click)="closeModal()">ยกเลิก</ion-button>
+                    <ion-button size="default" slot="end" expand="block" color="danger" (click)="closeModal()">ยกเลิก
+                    </ion-button>
                     <ion-button size="default" slot="end" expand="block" type="submit">บันทึก</ion-button>
                   </ion-item>
                 </ion-list>
