edit ui booking

--- a/PrompimanFront/src/app/booking/booking.page.html
+++ b/PrompimanFront/src/app/booking/booking.page.html
@@ -73,7 +73,7 @@
         <ion-col size="2" class="ion-text-left">
           021236548999
         </ion-col>
-        <ion-col size="1">
+        <ion-col size="1" class="ion-text-left">
           200
         </ion-col>
         <ion-col size="1.5">
