change name scss for regis-info page

--- a/PrompimanFront/src/global.scss
+++ b/PrompimanFront/src/global.scss
@@ -28,7 +28,7 @@
 @import "~@mobiscroll/angular/dist/css/mobiscroll.scss";
 
 
-.dialog-modal .modal-wrapper{
+.dialog-modal-4-regis-info .modal-wrapper{
     width: 90%;
     height: 70%;
     position: relative; 
