edit ui searching

--- a/PrompimanFront/src/app/booking/booking.page.html
+++ b/PrompimanFront/src/app/booking/booking.page.html
@@ -15,16 +15,12 @@
 
   <ion-row class="ion-padding">
     <ion-col size="11">
-      <div>
-        <ion-searchbar></ion-searchbar>
-      </div>
+      <ion-searchbar></ion-searchbar>
     </ion-col>
     <ion-col size="1">
-      <div>
-        <ion-button size="default" slot="end" expand="block" color="dark">
-          ค้นหา
-        </ion-button>
-      </div>
+      <ion-button style="margin-top: 0.8em;" size="default" expand="block" color="dark">
+        ค้นหา
+      </ion-button>
     </ion-col>
   </ion-row>
 
@@ -77,10 +73,10 @@
           200
         </ion-col>
         <ion-col size="1.5">
-            <ion-button size="default" expand="block" type="submit">ยืนยันการจอง</ion-button>
+          <ion-button size="default" expand="block" type="submit">ยืนยันการจอง</ion-button>
         </ion-col>
         <ion-col size="1">
-            <ion-button size="default" expand="block" color="medium">แก้ไข</ion-button>
+          <ion-button size="default" expand="block" color="medium">แก้ไข</ion-button>
         </ion-col>
       </ion-item>
     </ion-card-content>
