--- a/PrompimanFront/src/components/room/room.component.html
+++ b/PrompimanFront/src/components/room/room.component.html
@@ -1,3 +1,5 @@
-<ion-item>
-  <ion-label>คำนำหน้า</ion-label>
-</ion-item>
+<ion-row>
+  <ion-col size="4">
+      ยังไม่ได้ทำ component room
+  </ion-col>
+</ion-row>
