--- a/PrompimanFront/src/app/dlg-booking-detail/dlg-booking-detail.page.html
+++ b/PrompimanFront/src/app/dlg-booking-detail/dlg-booking-detail.page.html
@@ -4,6 +4,116 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+  <ion-item lines="none">
+    <ion-button size="default" (click)="register()" slot="end" expand="block" type="submit">
+      ยกเลิกการจอง
+    </ion-button>
+  </ion-item>
 
+  <form [formGroup]="fg" (ngSubmit)="handleSubmit()">
+    <ion-list lines="none">
+      <ion-row>
+        <ion-col size="2">
+          <ion-item>
+            <ion-label>ชื่อ</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="10">
+          <ion-item>
+            <ion-input type="text" formControlName="name" placeholder="กรุณากรอกข้อมูล"
+              [class.invalid]="isValid('name')"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="2"></ion-col>
+        <ion-col size="10">
+          <ion-item *ngIf="isValid('name')">
+            <span class="invalid-msg">
+              กรุณากรอกข้อมูล
+            </span>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="2">
+          <ion-item>
+            <ion-label>เบอร์โทร</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="10">
+          <ion-item>
+            <ion-input type="text" formControlName="telephone" placeholder="กรุณากรอกข้อมูล"
+              [class.invalid]="isValid('telephone')"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="2"></ion-col>
+        <ion-col size="10">
+          <ion-item *ngIf="isValid('telephone')">
+            <span class="invalid-msg">
+              กรุณากรอกข้อมูล
+            </span>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <app-datetime [fg]="fg" formName="date1" text="วันที่เข้า" mode="date"></app-datetime>
+      <app-datetime [fg]="fg" formName="date2" text="วันที่ออก" mode="date"></app-datetime>
+
+      <ion-row>
+        <ion-col size="2">
+          <ion-item>
+            <ion-label>จำนวนห้อง</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="10">
+          <ion-item>
+            <ion-input type="text" formControlName="count" placeholder="กรุณากรอกข้อมูล"
+              [class.invalid]="isValid('count')"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="2"></ion-col>
+        <ion-col size="10">
+          <ion-item *ngIf="isValid('count')">
+            <span class="invalid-msg">
+              กรุณากรอกข้อมูล
+            </span>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <app-room></app-room>
+
+      <ion-row>
+        <ion-col size="2">
+          <ion-item>
+            <ion-label>เงินสำรองจ่าย</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="10">
+          <ion-item>
+            <ion-input type="text" formControlName="money" placeholder="กรุณากรอกข้อมูล"
+              [class.invalid]="isValid('money')"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="2"></ion-col>
+        <ion-col size="10">
+          <ion-item *ngIf="isValid('money')">
+            <span class="invalid-msg">
+              กรุณากรอกข้อมูล
+            </span>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+    </ion-list>
+  </form>
 </ion-content>
